# python-project-50

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: checking  main.yml
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/functions/: diff.py  funcs.py
gendiff/scripts/: __init__.py  diff.py  gendiff.py  json.py  parsing.py  plain.py  quote.py  stylish.py
tests/: test_gendiff.py
tests/fixtures/: test_answer_json.txt
