[flake8]
accept-encodings = utf-8
max-complexity = 6
statistics = False
max-line-length = 80
enable-extensions = G
isort-show-traceback = True

exclude = .git,__pycache__,.venv,dist,build

ignore =
  # line break occurred before a binary operator
  W503

per-file-ignores =
  # init modules can contain the local imports, logic, unused imports
  __init__.py: F401

[isort]
multi_line_output = 3
include_trailing_comma = true
default_section = FIRSTPARTY
line_length = 79

[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Igor Cherkashov <cherkashov270999@gmail.com>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
